@@ -1262,6 +1262,7 @@ chain_ldadd( CfEntryInfo *p, Entry *e, ConfigArgs *ca )
 	assert( rc == LDAP_SUCCESS );
 
 	at = attr_find( e->e_attrs, ad );
+#if 0
 	if ( lc->lc_common_li == NULL && at != NULL ) {
 		/* FIXME: we should generate an empty default entry
 		 * if none is supplied */
@@ -1272,7 +1273,9 @@ chain_ldadd( CfEntryInfo *p, Entry *e, ConfigArgs *ca )
 		rc = LDAP_CONSTRAINT_VIOLATION;
 		goto done;
 
-	} else if ( lc->lc_common_li != NULL && at == NULL ) {
+	} else
+#endif
+	if ( lc->lc_common_li != NULL && at == NULL ) {
 		/* FIXME: we should generate an empty default entry
 		 * if none is supplied */
 		Debug( LDAP_DEBUG_ANY, "slapd-chain: "
